fixtures/go/fallback/should_fail/error_empty_branch.go
package api

func IgnoreFailure(err error) {
	if err != nil {}
}
